remove client try catch ickiness